[Qt]REGRESSION(r131428): cookies.db created on wrong place https://bugs.webkit.org/show_bug.cgi?id=99445

Patch by János Badics <jbadics@inf.u-szeged.hu> on 2012-10-26
Reviewed by Simon Hausmann.

Added a slash to the path of cookies.db in CookieJarQt.cpp.

* platform/qt/CookieJarQt.cpp:
(WebCore::SharedCookieJarQt::SharedCookieJarQt):

Canonical link: https://commits.webkit.org/118494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132583 268f45cc-cd09-0410-ab3c-d52691b4dbfc